apps/architecture-portal/versioned_docs/version-1.0.14.0/operations/testing-and-proof.mdx
---
title: Testing 与 Proof
area: operations
status: implemented
owners: [core, quality]
source_paths: [docs/quality/core-test-policy.md, docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md, scripts/core.sh, scripts/web-runtime-host.sh, tests, .github/workflows/ci.yml, .github/workflows/core-nightly.yml]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 测试层级
unit/component 验证局部边界，integration/e2e 验证组合，stress 验证锁自由/并发，Proof 验证 Headless Core 交付链。
## 稳定命令
`scripts/core.sh test dev full` 运行除 stress 外的完整层级；stress 必须显式运行；`scripts/core.sh proof` 也不包含 stress。
## Web Runtime Host Proof
`scripts/web-runtime-host.sh configure|build|test|proof|serve|clean` 是正式 Host 的稳定入口。`proof` 先在明确的非 clean-room 阶段运行现有 Chromium AudioWorklet conformance，再以固定 emsdk 连续执行两次 clean build，并逐字节比较两份 dist 后才运行 Python/Node/C++ Host 测试；它验证带 ownership contract 的 canonical manifest、完整生产资产清单，以及无 source/map/fixture/server/dev dependency 的精确 dist inventory。fixture generator 使用真实 native C++ compiler 对 active `realtime_engine.hpp` 常量求值，确定性再生 48 kHz mono PCM fixture；clean-room 阶段只把第二份 dist 与批准的 WAV/metadata pair 复制到 `mktemp -d`，从临时 dist 启动 proof-only server，并禁用 Playwright 的 source-tree toolchain webServer。随后运行 Chromium manifest gate、完整创作/restart/failure journey，以及 WebKit capability smoke；全程清除 `NODE_PATH`/`PYTHONPATH` 并禁用 package fetch。`clean` 只删除解析后的 `build/web/host` 子树。

Chromium journey 对 500 个 paced Trigger 保存所有 admitted sequence，排空并比较完整 outcome 集合，拒绝 missing、duplicate、unknown、`voice_capacity`、queue/Bank transition/Outcome Ring drop；Take 路径证明 20 个 capture event、stop 后第 21 个 Trigger 不进入已停止 Take、Facade commit/inspect、page/Worker restart、OPFS reopen 与重新发布。失败路径覆盖 44.1 kHz Snapshot 拒绝且旧 generation 留存、显式 suspend/recovery、竞争 writer 的 `PROJECT_BUSY`、mutation 前 protocol mismatch、精确 recovery outcome timeout、timeout 后 lease 重获与 clean close。

WebKit smoke 只有在所有 mandatory primitive 可用时才运行 protocol、OPFS、restart 与 lifecycle；否则必须输出结构化 `UNSUPPORTED_WEB_RUNTIME` limitation。当前 Playwright WebKit 缺少 `opfsSyncAccessHandle` 与 `opfsWritableReplace`，因此是明确限制记录，不是完整 PASS。
## Web 分发 HTTP 门禁
proof-only server 在 bind 前运行完整 dist verifier；它以 dynamic port、新进程 PID 和一次性 nonce 的 ownership record 建立 readiness，端口已被旧进程占用时不能误判为成功。每次读取都用目录文件描述符、`O_NOFOLLOW` 和同一已 `fstat` 的文件描述符，并再次匹配启动时的资产 hash，因此符号链接、路径交换和普通文件替换均不会被服务。所有响应设置精确 COOP/COEP/CORP/CSP 与 `nosniff`，Wasm 为 `application/wasm`；仅 index/manifest 为 `no-store`，内容哈希资产为 immutable。Traversal、目录、Range 与未知路径返回 404，不支持的方法返回 405。EXIT/INT/TERM 都清理 Host 所拥有的 server PID 与临时 readiness 目录。该服务只用于本地 Proof，不是生产发布入口。
## CI 责任
Linux ASAN 负责 Python-hosted 覆盖，macOS ASAN 只覆盖 native label；两者和 stress 都是 PR 门禁。

正式 CI 保留 Web Runtime Lab、macOS、Ubuntu、Linux ASan、macOS native ASan 与 Coverage，并新增 Formal Web Host lane：校验固定 emsdk revision/release mapping/`emcc 6.0.5`，执行 `npm ci`，显式安装 Chromium/WebKit，再运行 `scripts/web-runtime-host.sh proof`。Nightly 继续保留 TSan 与重复 Stress lane。工作流定义不是远端执行结果；实际 Pull Request CI URL 与状态只能在 CI 产生后记录。
## 证据分离
本地通过、clean-room Proof、CI 绿色、正式 tag、Channel promotion、门户快照和物理设备验收分别报告。`1.0.14.0` 身份/Assembly 与本地自动化门禁已有本地证据；Pull Request CI 仍为 `pending / unverified`，没有远端运行结果。五项物理记录分别是：macOS Safari Pointer `deferred / unverified`、macOS Chrome Pointer `deferred / unverified`、macOS Chrome Physical MIDI `deferred / unverified`、iPadOS Safari Touch `deferred / unverified`、iPadOS Safari Touch lifecycle `deferred / unverified`。
## 门户责任
页面状态必须链接实际测试/Proof，并明确自动化无法证明的体验范围。
