apps/architecture-portal/versioned_docs/version-1.0.15.0/operations/testing-and-proof.mdx
---
title: Testing 与 Proof
area: operations
status: implemented
owners: [core, quality]
source_paths: [docs/quality/core-test-policy.md, docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md, scripts/core.sh, scripts/web-runtime-host.sh, scripts/web-toolchain-conformance.sh, tests, .github/actions/configure-build-acceleration/action.yml, .github/actions/macos-core-gates/action.yml, .github/scripts/assert-macos-gate-result.sh, .github/workflows/ci.yml, .github/workflows/core-nightly.yml]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 测试层级
unit/component 验证局部边界，integration/e2e 验证组合，stress 验证锁自由/并发，Proof 验证 Headless Core 交付链。
## 稳定命令
`scripts/core.sh test dev full` 运行除 stress 外的完整层级；stress 必须显式运行；`scripts/core.sh proof` 也不包含 stress。
## Web Runtime Host Proof
`scripts/web-runtime-host.sh configure|build|test|proof|serve|clean` 是正式 Host 的稳定入口。`proof` 先在明确的非 clean-room 阶段运行现有 Chromium AudioWorklet conformance，再以固定 emsdk 连续执行两次 clean build，并逐字节比较两份 dist 后才运行 Python/Node/C++ Host 测试；它验证带 ownership contract 的 canonical manifest、完整生产资产清单，以及无 source/map/fixture/server/dev dependency 的精确 dist inventory。fixture generator 使用真实 native C++ compiler 对 active `realtime_engine.hpp` 常量求值，确定性再生 48 kHz mono PCM fixture；clean-room 阶段只把第二份 dist 与批准的 WAV/metadata pair 复制到 `mktemp -d`，从临时 dist 启动 proof-only server，并禁用 Playwright 的 source-tree toolchain webServer。Chromium 阶段从 Git tracked inventory 选择全部 `web_runtime_host_*.spec.mjs`，因此 source-shell lifecycle、manifest gate 与完整 packaged 创作/restart/failure journey 都属于稳定 Proof；随后单独运行 WebKit capability smoke。全程清除 `NODE_PATH`/`PYTHONPATH` 并禁用 package fetch；`clean` 只删除解析后的 `build/web/host` 子树。

Chromium journey 的第一段只通过可见控件执行 `Load diagnostic project -> ready -> Activate audio -> running -> trigger`。fresh origin 首次准备必须恰好产生一次 create、一次 import、64 次 assignment 与 revision `65`；Pointer 和 Keyboard 必须各产生一个 admission 和一个 `voice_started` outcome；reload 后同一 browser-local descriptor 必须零重复 mutation、revision 不变并再次进入 `running`，且 descriptor 的三个 UUID 不得进入 DOM diagnostics。随后对 500 个 paced Trigger 保存所有 admitted sequence，排空并比较完整 outcome 集合，拒绝 missing、duplicate、unknown、`voice_capacity`、queue/Bank transition/Outcome Ring drop；Take 路径证明 20 个 capture event、stop 后第 21 个 Trigger 不进入已停止 Take、Facade commit/inspect、page/Worker restart、OPFS reopen 与重新发布。失败路径覆盖 44.1 kHz Snapshot 拒绝且旧 generation 留存、显式 suspend/recovery、竞争 writer 的 `PROJECT_BUSY`、mutation 前 protocol mismatch、精确 recovery outcome timeout、timeout 后 lease 重获与 clean close。

WebKit smoke 只有在所有 mandatory primitive 可用时才运行 protocol、OPFS、restart 与 lifecycle；否则必须输出结构化 `UNSUPPORTED_WEB_RUNTIME` limitation。当前 Playwright WebKit 缺少 `opfsSyncAccessHandle` 与 `opfsWritableReplace`，因此是明确限制记录，不是完整 PASS。
## Web 分发 HTTP 门禁
proof-only server 在 bind 前运行完整 dist verifier；它以 dynamic port、新进程 PID 和一次性 nonce 的 ownership record 建立 readiness，端口已被旧进程占用时不能误判为成功。每次读取都用目录文件描述符、`O_NOFOLLOW` 和同一已 `fstat` 的文件描述符，并再次匹配启动时的资产 hash，因此符号链接、路径交换和普通文件替换均不会被服务。所有响应设置精确 COOP/COEP/CORP/CSP 与 `nosniff`，Wasm 为 `application/wasm`；仅 index/manifest 为 `no-store`，内容哈希资产为 immutable。Traversal、目录、Range 与未知路径返回 404，不支持的方法返回 405。EXIT/INT/TERM 都清理 Host 所拥有的 server PID 与临时 readiness 目录。该服务只用于本地 Proof，不是生产发布入口。
## CI 责任
Linux ASAN 负责 Python-hosted 覆盖，macOS ASAN 只覆盖 native label；两者和 stress 都是 PR 门禁。

正式 CI 保留 Web Runtime Lab、macOS、Ubuntu、Linux ASan、macOS native ASan 与 Coverage，并新增 Formal Web Host lane：校验固定 emsdk revision/release mapping/`emcc 6.0.5`，执行 `npm ci`，显式安装 Chromium/WebKit，再运行 `scripts/web-runtime-host.sh proof`。Nightly 继续保留 TSan 与重复 Stress lane。工作流定义不是远端执行结果；实际 Pull Request CI URL 与状态只能在 CI 产生后记录。

PR 与 `main` 的 Web、Ubuntu Core、Linux ASan 和 Coverage 重负载任务优先选择至少一台在线、空闲且带 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`contabo` 标签的受信 runner；selector 不再绑定机器名称，GitHub 会把任务分配给任意满足标签的空闲 runner。外部 fork、状态密钥缺失、Runner API 失败或池中没有在线空闲匹配 runner 时，任务在开始前改用 GitHub-hosted Ubuntu。当前 Contabo 池由两个独立 runner service 构成，最多并发两个任务，其余排队；所有 CI CMake build 均限制为 3 路并行。Linux 原生任务共享 checkout 外持久 `ccache`，Emscripten 任务明确绕过该缓存；M1 原生任务使用本机持久 `ccache`，GitHub-hosted fallback 只保留 3 路并行、不依赖 runner 本地缓存。选定 lane 的语义失败是最终结果，不会换机器重试；每个任务输出的缓存统计只作诊断证据。

macOS Core Proof 与 native ASan 优先选择带 `lmdj` 标签、在线且空闲的受信 self-hosted runner；外部 fork、状态密钥缺失、Runner API 失败、机器离线/忙碌/缺失/标签不符时直接使用 GitHub-hosted macOS。self-hosted lane 若因 checkout/setup、通信中断或 30 分钟超时而没有发布终态结果，GitHub-hosted macOS 才完整执行一次备用 lane；已发布的准备、Proof 或 sanitizer 失败不会触发备用执行。最终门禁仍以 `core (macos-latest)` 与 `core-asan-macos` 对外报告，避免 runner 实现细节改变受保护分支契约。

本地 Mac 可以在 push 前承担额外的 focused、Proof 或浏览器预检，但这些结果不替代绑定具体 commit 的 GitHub required checks。
## 证据分离
本地通过、clean-room Proof、CI 绿色、正式 tag、Channel promotion、门户快照和物理设备验收分别报告。当前本地 `1.0.15.0` / Host `1.1.0` 候选的 `scripts/web-runtime-host.sh proof` 已通过；精确测试计数以同一候选的验收记录和命令输出为准。它不继承历史 `1.0.14.0` 的 PR #91 [Core CI](https://github.com/endaye/lmdj/actions/runs/31009477920)、[Architecture Portal CI](https://github.com/endaye/lmdj/actions/runs/31009477985) 或 merged-main `d4cf657bdd194e3eeee4e78e119dcb0b97f49cdf` 结论。匹配 Build 的快照 provenance 由 Portal 门禁单独判定，不由 Host Proof 推断。五项物理记录分别是：macOS Safari Pointer `deferred / unverified`、macOS Chrome Pointer `deferred / unverified`、macOS Chrome Physical MIDI `deferred / unverified`、iPadOS Safari Touch `deferred / unverified`、iPadOS Safari Touch lifecycle `deferred / unverified`。
## 门户责任
页面状态必须链接实际测试/Proof，并明确自动化无法证明的体验范围。
